--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@mui/x-data-grid": "^7.5.1",
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
     "@nivo/geo": "^0.87.0",
@@ -17,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-data-grid": "^7.0.0-beta.44",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.1",
